--- a/research/trails.ipynb
+++ b/research/trails.ipynb
@@ -6,6 +6,138 @@
    "source": [
     "# Download Data from Google Drive"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1ItVgv1DhA1ptztxc0dbKMD9kXcD1hM5d/view?usp=drive_link\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '1ItVgv1DhA1ptztxc0dbKMD9kXcD1hM5d',\n",
+       " 'view?usp=drive_link']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_id = url.split(\"/\")[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1ItVgv1DhA1ptztxc0dbKMD9kXcD1hM5d'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1ItVgv1DhA1ptztxc0dbKMD9kXcD1hM5d\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1ItVgv1DhA1ptztxc0dbKMD9kXcD1hM5d&confirm=t&uuid=6be981a9-9fb6-4d75-8e2d-c9a0b3e22c83\n",
+      "To: d:\\Programming\\Projects\\Plant-Disease-Classification-using-MLflow-and-DVC\\research\\Potato-Disease-Dataset\n",
+      "100%|██████████| 39.2M/39.2M [01:07<00:00, 577kB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Potato-Disease-Dataset'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = \"https://drive.google.com/uc?/export=download&id=\"\n",
+    "gdown.download(prefix+file_id, \"Potato-Disease-Dataset\", quiet=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
