--- a/research/02_Prepare_Base_Model.ipynb
+++ b/research/02_Prepare_Base_Model.ipynb
@@ -96,18 +96,20 @@
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self, \n",
-    "                 config_filepath = CONFIG_FILE_PATH,\n",
-    "                 params_filepath = PARAMS_FILE_PATH):\n",
-    "        \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        config_filepath = CONFIG_FILE_PATH,\n",
+    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def get_prepare_base_model_config(self) -> PrepareBaseModelConfig:\n",
     "        config = self.config.prepare_base_model\n",
-    "\n",
+    "        \n",
     "        create_directories([config.root_dir])\n",
     "\n",
     "        prepare_base_model_config = PrepareBaseModelConfig(\n",
@@ -121,12 +123,12 @@
     "            params_classes=self.params.CLASSES\n",
     "        )\n",
     "\n",
-    "        return prepare_base_model_config\n"
+    "        return prepare_base_model_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,34 +139,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create components\n",
     "class PrepareBaseModel:\n",
     "    def __init__(self, config: PrepareBaseModelConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    # Download base model.\n",
+    "    \n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.applications.vgg16.VGG16(\n",
     "            input_shape=self.config.params_image_size,\n",
-    "            weights=self.config.params_weights,  \n",
+    "            weights=self.config.params_weights,\n",
     "            include_top=self.config.params_include_top\n",
     "        )\n",
     "\n",
+    "        self.save_model(path=self.config.base_model_path, model=self.model)\n",
     "\n",
+    "\n",
+    "    \n",
     "    @staticmethod\n",
-    "    def prepare_full_model(model, classes, freeze_all,\n",
-    "                           freeze_till, learning_rate):\n",
+    "    def _prepare_full_model(model, classes, freeze_all, freeze_till, learning_rate):\n",
     "        if freeze_all:\n",
     "            for layer in model.layers:\n",
     "                model.trainable = False\n",
-    "        elif (freeze_all is not None) and (freeze_till>0):\n",
-    "            for layer in model.layers[:freeze_till]:\n",
+    "        elif (freeze_till is not None) and (freeze_till > 0):\n",
+    "            for layer in model.layers[:-freeze_till]:\n",
     "                model.trainable = False\n",
-    "            \n",
+    "\n",
     "        flatten_in = tf.keras.layers.Flatten()(model.output)\n",
     "        prediction = tf.keras.layers.Dense(\n",
     "            units=classes,\n",
@@ -177,17 +180,17 @@
     "        )\n",
     "\n",
     "        full_model.compile(\n",
-    "            optimizer = tf.keras.optimizers.SGD(learning_rate=learning_rate),\n",
-    "            loss = tf.keras.losses.CategoricalCrossentropy(),\n",
-    "            metrics = [\"accuracy\"]\n",
+    "            optimizer=tf.keras.optimizers.SGD(learning_rate=learning_rate),\n",
+    "            loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "            metrics=[\"accuracy\"]\n",
     "        )\n",
     "\n",
     "        full_model.summary()\n",
     "        return full_model\n",
-    "\n",
+    "    \n",
     "\n",
     "    def update_base_model(self):\n",
-    "        self.full_model = self.prepare_full_model(\n",
+    "        self.full_model = self._prepare_full_model(\n",
     "            model=self.model,\n",
     "            classes=self.config.params_classes,\n",
     "            freeze_all=True,\n",
@@ -196,6 +199,7 @@
     "        )\n",
     "\n",
     "        self.save_model(path=self.config.updated_base_model_path, model=self.full_model)\n",
+    "    \n",
     "\n",
     "\n",
     "    @staticmethod\n",
@@ -205,19 +209,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-03-23 10:34:20,812: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-03-23 10:34:20,816: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-03-23 10:34:20,817: INFO: common: created directory at: artifacts]\n",
-      "[2025-03-23 10:34:20,818: INFO: common: created directory at: artifacts/prepare_base_model]\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "58889256/58889256 [==============================] - 99s 2us/step\n",
+      "[2025-03-23 14:47:15,298: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-03-23 14:47:15,298: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-03-23 14:47:15,306: INFO: common: created directory at: artifacts]\n",
+      "[2025-03-23 14:47:15,307: INFO: common: created directory at: artifacts/prepare_base_model]\n",
+      "[2025-03-23 14:47:15,861: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
       "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
@@ -262,18 +265,17 @@
       "                                                                 \n",
       " flatten (Flatten)           (None, 25088)             0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2)                 50178     \n",
+      " dense (Dense)               (None, 3)                 75267     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 14,764,866\n",
-      "Trainable params: 50,178\n",
+      "Total params: 14,789,955\n",
+      "Trainable params: 75,267\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "# Setup Pipeline\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    prepare_base_model_config = config.get_prepare_base_model_config()\n",
